# TGU_Robocore_2027

./: CMakeLists.txt  README.md  get_lines.sh  项目结构与代码风格.md
app/auto_aim/: auto_aim.cpp  auto_aim.hpp
io/: CMakeLists.txt
io/hikrobot/: hikrobot.cpp  hikrobot.hpp
io/serial/: README.md  serial.cpp  serial.hpp
task/: CMakeLists.txt  sentry.cpp
task/test/: read_toml.cpp  test_camera.cpp  test_foxglove.cpp  test_logger.cpp  test_serial.cpp
tools/: README.md  crc.cpp  crc.hpp  foxglove_comm.cpp  foxglove_comm.hpp  logger.cpp  logger.hpp
